--- a/rojo.toml
+++ b/rojo.toml
@@ -5,6 +5,7 @@ return {
 		ReplicatedStorage = {
 			Shared = {
 				Constants = "src/ReplicatedStorage/Shared/Constants.lua",
+				Animations = "src/ReplicatedStorage/Shared/Animations.lua",
 			},
 			Remotes = true,
 		},
