--- a/aftman.toml
+++ b/aftman.toml
@@ -1,2 +1,5 @@
 [tools]
 rojo = "rojo-rbx/rojo@7.4.4"
+luau-lsp = "JohnnyMorganz/luau-lsp@1.36.0"
+stylua = "JohnnyMorganz/StyLua@0.20.1"
+selene = "Kampfkarren/selene@0.27.1"
