--- a/default.project.json
+++ b/default.project.json
@@ -32,5 +32,10 @@
         "$className": "Folder"
   }
     }
+    ,
+    "tests": {
+      "$className": "Folder",
+      "$path": "tests"
+    }
   }
 }
