--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,74 @@
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
+# Build-Artefakte
+build.rbxl
+build.rbxlx
+*.rbxlx
+*.rbxm
+*.rbxmx
 
-# VS Code
-.history/
+# Package-Manager
+Packages/
+wally.lock
+.wally/
+.aftman/
+node_modules/
+package-lock.json
+yarn.lock
+
+# Rojo
+*.project.json.bak
+rojo.lock
 
 # Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
 
-# Temp
+# Temp/Cache
 .tmp/
 tmp/
 temp/
+.cache/
+.parcel-cache/
 
-# Roblox/Studio artifacts
-*.rbxlx
-*.rbxm
-*.rbxmx
-build.rbxlx
+# IDEs/Editoren
+.vscode/.ropeproject
+.history/
+*.swp
+*.swo
+*~
 
-# Wally/Aftman (Roblox package managers)
-Packages/
-wally.lock
-.wally/
-.aftman/
-
-# Rojo backups
-*.project.json.bak
-
-# OS/Editor miscellany
-Thumbs.db
-ehthumbs.db
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
 Icon?
 .Spotlight-V100
 .Trashes
+._*
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+
+# Runtime
+.env
+.env.local
+.env.*.local
+
+# Test Coverage
+coverage/
+.nyc_output/
+.coverage
+
+# Debugging
+.vscode/launch.json.bak
