--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,5 +43,8 @@
 	"luau-lsp.inlayHints.typeHintMaxLength": 500,
 	"luau-lsp.inlayHints.variableTypes": true,
 	"luau-lsp.plugin.enabled": true,
-	"notebook.defaultFormatter": "ms-toolsai.jupyter"
+	"notebook.defaultFormatter": "ms-toolsai.jupyter",
+	"[yaml]": {
+		"editor.defaultFormatter": "redhat.vscode-yaml"
+	}
 }
